Rename IntegrationTests2 -> NukeIntegrationTests

--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -388,7 +388,7 @@ stages:
           matrixName: debian
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         debian_netcoreapp3_0:
           publishTargetFramework: netcoreapp3.0
@@ -396,7 +396,7 @@ stages:
           matrixName: debian
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         debian_netcoreapp3_1:
           publishTargetFramework: netcoreapp3.1
@@ -404,7 +404,7 @@ stages:
           matrixName: debian
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         debian_net5_0:
           publishTargetFramework: net5.0
@@ -412,7 +412,7 @@ stages:
           matrixName: debian
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         alpine_netcoreapp2_1:
           publishTargetFramework: netcoreapp2.1
@@ -420,7 +420,7 @@ stages:
           matrixName: alpine
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         alpine_netcoreapp3_0:
           publishTargetFramework: netcoreapp3.0
@@ -428,7 +428,7 @@ stages:
           matrixName: alpine
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         alpine_netcoreapp3_1:
           publishTargetFramework: netcoreapp3.1
@@ -436,7 +436,7 @@ stages:
           matrixName: alpine
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         alpine_net5_0:
           publishTargetFramework: net5.0
@@ -444,7 +444,7 @@ stages:
           matrixName: alpine
           poolName: Azure Pipelines
           vmImage: ubuntu-18.04
-          dockerComposeTask: IntegrationTests2
+          dockerComposeTask: NukeIntegrationTests
           dockerComposeDependenciesTask: StartDependencies
         arm64_net5_0:
           publishTargetFramework: net5.0
@@ -452,7 +452,7 @@ stages:
           matrixName: arm64
           poolName: Arm64
           vmImage:
-          dockerComposeTask: IntegrationTests2.ARM64
+          dockerComposeTask: NukeIntegrationTests.ARM64
           dockerComposeDependenciesTask: StartDependencies.ARM64
 
     variables:
@@ -474,7 +474,7 @@ stages:
         command: "BuildLinuxIntegrationTests --framework $(publishTargetFramework)"
 
     - task: DockerCompose@0
-      displayName: docker-compose build IntegrationTests2
+      displayName: docker-compose build NukeIntegrationTests
       inputs:
         containerregistrytype: Container Registry
         dockerComposeCommand: build --build-arg baseImage=$(baseImage) --build-arg framework=$(publishTargetFramework) $(dockerComposeTask)
@@ -486,7 +486,7 @@ stages:
         dockerComposeCommand: run --rm $(dockerComposeDependenciesTask)
 
     - task: DockerCompose@0
-      displayName: docker-compose run IntegrationTests2
+      displayName: docker-compose run NukeIntegrationTests
       inputs:
         containerregistrytype: Container Registry
         dockerComposeFileArgs: |
