Tests for .net framework. Rebase and fixing builds. Adding copyright headers to security files after Rebase

--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,4 @@ deploy/AzureAppServices/
 
 # profiler output files
 src/Datadog.Trace.ClrProfiler.Native/build/
+/src/Datadog.Trace.ClrProfiler.Native/out/
