--- a/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
+++ b/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
@@ -26,6 +26,9 @@
 
   <ItemGroup>
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="log4net" Version="2.0.12" />
+    <PackageReference Include="NLog" Version="4.7.9" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
