Add option to print drive space for every target

--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -298,7 +298,7 @@ stages:
     - template: steps/install-dotnet-sdks.yml
     - template: steps/restore-working-directory.yml
 
-    - script: build.cmd BuildAndRunWindowsIntegrationTests
+    - script: build.cmd BuildAndRunWindowsIntegrationTests --PrintDriveSpace
       displayName: Run integration tests
 
     - task: PublishTestResults@2
