--- a/test/test-applications/regression/dependency-libs/Directory.Build.props
+++ b/test/test-applications/regression/dependency-libs/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
+  <Import Project="..\..\Directory.Build.props" />
+
   <PropertyGroup>
     <TargetFrameworks>net452;net461;netcoreapp2.1</TargetFrameworks>
     <ExcludeNativeProfiler>true</ExcludeNativeProfiler>
   </PropertyGroup>
-
-  <Import Project="..\Directory.Build.props" />
 </Project>
