--- a/test/test-applications/regression/dependency-libs/Directory.Build.props
+++ b/test/test-applications/regression/dependency-libs/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="..\..\Directory.Build.props" />
+  <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 
   <PropertyGroup>
     <TargetFrameworks>net452;net461;netcoreapp2.1</TargetFrameworks>
