--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -11,6 +11,15 @@ trigger:
       - .github/*
 
 
+schedules:
+  - cron: "0 3 * * *"
+    displayName: Daily 3am (UTC) build
+    branches:
+      include:
+        - master
+        - /benchmarks/*
+    always: true
+
 # Global variables
 variables:
   buildConfiguration: Release
@@ -117,6 +126,7 @@ stages:
       artifact: build-linux-$(matrixName)-working-directory
 
 - stage: build_macos
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: []
   jobs:
   - job: build
@@ -146,6 +156,7 @@ stages:
       artifact: build-macos-working-directory
 
 - stage: package_windows
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -175,6 +186,7 @@ stages:
         artifact: nuget-packages
 
 - stage: unit_tests_windows
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -213,6 +225,7 @@ stages:
         condition: succeededOrFailed()
 
 - stage: unit_tests_macos
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: build_macos
   jobs:
   - job: managed
@@ -239,6 +252,7 @@ stages:
         condition: succeededOrFailed()
 
 - stage: unit_tests_linux
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: [build_linux]
   jobs:
   - job: test
@@ -286,6 +300,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_windows
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -315,6 +330,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_windows_iis
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: [build_windows, package_windows]
   jobs:
   - job: Windows_IIS
@@ -383,6 +399,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_linux
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: [build_linux]
   jobs:
   - job: Test
@@ -547,6 +564,7 @@ stages:
         script: 'Start-Sleep -s 120'
 
 - stage: dotnet_tool
+  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
   dependsOn: [build_windows, build_linux, build_macos]
   jobs:
   - job: build_runner_tool_and_standalone
