--- a/.azure-pipelines/benchmarks.yml
+++ b/.azure-pipelines/benchmarks.yml
@@ -1,17 +1,4 @@
-trigger:
-  branches:
-    include:
-      - master
-      - refs/tags/*
-
-schedules:
-- cron: "0 3 * * *"
-  displayName: Daily 3am (UTC) build
-  branches:
-    include:
-    - master
-    - /benchmarks/*
-  always: true
+trigger: none
 
 variables:
   buildConfiguration: release
