--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -33,6 +33,9 @@ variables:
   DD_DOTNET_TRACER_MSBUILD:
   NugetPackageDirectory: $(System.DefaultWorkingDirectory)/packages
   relativeNugetPackageDirectory: packages
+  # For scheduled builds, only run benchmarks and crank (and deps).
+  # Allow forcing a benchmark/throughput run using run_benchmarks_only=true
+  benchmarksOnly: or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['run_benchmarks_only'], 'true'))
 
 # Declare the datadog agent as a resource to be used as a pipeline service
 resources:
@@ -126,7 +129,7 @@ stages:
       artifact: build-linux-$(matrixName)-working-directory
 
 - stage: build_macos
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: []
   jobs:
   - job: build
@@ -156,7 +159,7 @@ stages:
       artifact: build-macos-working-directory
 
 - stage: package_windows
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -186,7 +189,7 @@ stages:
         artifact: nuget-packages
 
 - stage: unit_tests_windows
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -225,7 +228,7 @@ stages:
         condition: succeededOrFailed()
 
 - stage: unit_tests_macos
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: build_macos
   jobs:
   - job: managed
@@ -252,7 +255,7 @@ stages:
         condition: succeededOrFailed()
 
 - stage: unit_tests_linux
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: [build_linux]
   jobs:
   - job: test
@@ -300,7 +303,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_windows
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -330,7 +333,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_windows_iis
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: [build_windows, package_windows]
   jobs:
   - job: Windows_IIS
@@ -399,7 +402,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_linux
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: [build_linux]
   jobs:
   - job: Test
@@ -564,7 +567,7 @@ stages:
         script: 'Start-Sleep -s 120'
 
 - stage: dotnet_tool
-  condition: ne(variables['Build.Reason'], 'Schedule') # skip for scheduled builds
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: [build_windows, build_linux, build_macos]
   jobs:
   - job: build_runner_tool_and_standalone
@@ -669,6 +672,7 @@ stages:
       artifact: runner-standalone-osx-x64
 
 - stage: upload
+  condition: and(succeeded(), not(variables['benchmarksOnly']))
   dependsOn: [package_windows, build_linux]
   jobs:
   - job: s3_upload
@@ -760,6 +764,7 @@ stages:
             eq(variables.isMainBranch, true)
           )
         )
+
 
 - stage: throughput
   dependsOn: [build_linux, build_windows]
