--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -35,7 +35,7 @@ variables:
   relativeNugetPackageDirectory: packages
   # For scheduled builds, only run benchmarks and crank (and deps).
   # Allow forcing a benchmark/throughput run using run_benchmarks_only=true
-  benchmarksOnly: or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['run_benchmarks_only'], 'true'))
+  benchmarksOnly: ${{ or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['run_benchmarks_only'], 'true')) }} # only works if you have a main branch
 
 # Declare the datadog agent as a resource to be used as a pipeline service
 resources:
@@ -129,7 +129,7 @@ stages:
       artifact: build-linux-$(matrixName)-working-directory
 
 - stage: build_macos
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: []
   jobs:
   - job: build
@@ -159,7 +159,7 @@ stages:
       artifact: build-macos-working-directory
 
 - stage: package_windows
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -189,7 +189,7 @@ stages:
         artifact: nuget-packages
 
 - stage: unit_tests_windows
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -228,7 +228,7 @@ stages:
         condition: succeededOrFailed()
 
 - stage: unit_tests_macos
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: build_macos
   jobs:
   - job: managed
@@ -255,7 +255,7 @@ stages:
         condition: succeededOrFailed()
 
 - stage: unit_tests_linux
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: [build_linux]
   jobs:
   - job: test
@@ -303,7 +303,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_windows
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: build_windows
   pool:
     vmImage: windows-2019
@@ -333,7 +333,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_windows_iis
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: [build_windows, package_windows]
   jobs:
   - job: Windows_IIS
@@ -402,7 +402,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: integration_tests_linux
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: [build_linux]
   jobs:
   - job: Test
@@ -568,7 +568,7 @@ stages:
         script: 'Start-Sleep -s 120'
 
 - stage: dotnet_tool
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: [build_windows, build_linux, build_macos]
   jobs:
   - job: build_runner_tool_and_standalone
@@ -673,7 +673,7 @@ stages:
       artifact: runner-standalone-osx-x64
 
 - stage: upload
-  condition: and(succeeded(), not(variables['benchmarksOnly']))
+  condition: and(succeeded(), eq(variables['benchmarksOnly'], 'False'))
   dependsOn: [package_windows, build_linux]
   jobs:
   - job: s3_upload
@@ -765,6 +765,7 @@ stages:
             eq(variables.isMainBranch, true)
           )
         )
+
 
 
 - stage: throughput
