--- a/.azure-pipelines/crank.yml
+++ b/.azure-pipelines/crank.yml
@@ -1,13 +1,5 @@
 trigger: none
-
-schedules:
-- cron: "0 4 * * *"
-  displayName: Daily 4am (UTC) build
-  branches:
-    include:
-    - master
-    - /benchmarks/*
-  always: true
+pr: none
 
 jobs:
 
