--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -631,6 +631,7 @@ services:
       - MYSQL57_PORT=3306
       - RABBITMQ_HOST=rabbitmq
       - KAFKA_BROKER_HOST=kafka-broker:29092
+      - AWS_SQS_HOST=aws_sqs:9324
     depends_on:
       - servicestackredis
       - stackexchangeredis
@@ -644,7 +645,7 @@ services:
       - rabbitmq
       - kafka-broker
       - kafka-zookeeper
-
+      - aws_sqs
 
   StartDependencies:
     image: andrewlock/wait-for-dependencies
@@ -661,9 +662,10 @@ services:
       - rabbitmq
       - kafka-broker
       - kafka-zookeeper
+      - aws_sqs
     environment:
       - TIMEOUT_LENGTH=60
-    command: servicestackredis:6379 stackexchangeredis:6379 elasticsearch5:9200 elasticsearch6:9200 sqlserver:1433 mongo:27017 postgres:5432 mysql:3306 mysql57:3306 rabbitmq:5672 kafka-broker:9092 kafka-zookeeper:2181
+    command: servicestackredis:6379 stackexchangeredis:6379 elasticsearch5:9200 elasticsearch6:9200 sqlserver:1433 mongo:27017 postgres:5432 mysql:3306 mysql57:3306 rabbitmq:5672 kafka-broker:9092 kafka-zookeeper:2181 aws_sqs:9324
 
   NukeIntegrationTests.ARM64:
     build:
