Fix ValueTuple reference

--- a/test/test-applications/integrations/Samples.ServiceStack.Redis/Samples.ServiceStack.Redis.csproj
+++ b/test/test-applications/integrations/Samples.ServiceStack.Redis/Samples.ServiceStack.Redis.csproj
@@ -6,12 +6,11 @@
     <!-- Required to build multiple projects with the same Configuration|Platform -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
-    <!-- Ignore Found conflicts between different versions of "System.ValueTuple" (and others) that could not be resolved.   -->
-    <NoWarn>MSB3277</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ServiceStack.Redis" Version="$(ApiVersion)" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
