Downgrade the version of cmake used for MacOs builds
Version 3.20.x causes the loader dll and pdb to not be embedded correctly.
You can confirm this behaviour by running `xcrun size -x -l -m Datadog.Trace.ClrProfiler.Native.dylib` and checking for the `Segment binary` section. In a bad build (with 3.20.x) it will be missing

--- a/.azure-pipelines/runner.yml
+++ b/.azure-pipelines/runner.yml
@@ -114,6 +114,7 @@ jobs:
   pool:
     vmImage: macOS-10.15
   steps:
+  - template: steps/downgrade-macos-cmake.yml
 
   - task: UseDotNet@2
     displayName: install dotnet core runtime 3.1
