--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -59,7 +59,7 @@ stages:
     steps:
     - template: steps/install-dotnet-5-sdk.yml
 
-    - script: build.cmd BuildTracerHome
+    - script: tracer\build.cmd BuildTracerHome
       displayName: Build tracer home
 
     - publish: $(tracerHome)
@@ -139,7 +139,7 @@ stages:
     steps:
     - template: steps/install-dotnet-5-sdk.yml
 
-    - script: ./build.sh BuildTracerHome
+    - script: ./tracer/build.sh BuildTracerHome
       displayName: Build tracer home
 
     ## TODO: Move to Nuke target
@@ -169,7 +169,7 @@ stages:
       - template: steps/install-dotnet-5-sdk.yml
       - template: steps/restore-working-directory.yml
 
-      - script: build.cmd PackageTracerHome
+      - script: tracer\build.cmd PackageTracerHome
         displayName: Build MSI and Tracer home
 
       - publish: $(artifacts)/windows-tracer-home.zip
@@ -199,7 +199,7 @@ stages:
       - template: steps/install-dotnet.yml
       - template: steps/restore-working-directory.yml
 
-      - script: build.cmd BuildAndRunManagedUnitTests
+      - script: tracer\build.cmd BuildAndRunManagedUnitTests
         displayName: Build and Test
 
       - publish: build_data
@@ -218,7 +218,7 @@ stages:
       - template: steps/install-dotnet.yml
       - template: steps/restore-working-directory.yml
 
-      - script: build.cmd BuildAndRunNativeUnitTests
+      - script: tracer\build.cmd BuildAndRunNativeUnitTests
         displayName: Build and Test
 
       - task: PublishTestResults@2
@@ -240,7 +240,7 @@ stages:
         parameters:
           artifact: build-macos-working-directory
 
-      - script: ./build.sh BuildAndRunManagedUnitTests
+      - script: ./tracer/build.sh BuildAndRunManagedUnitTests
         displayName: Build and Test
 
       - publish: build_data
@@ -329,7 +329,7 @@ stages:
       displayName: 'Start CosmosDB Emulator'
       workingDirectory: $(Pipeline.Workspace)
 
-    - script: build.cmd BuildAndRunWindowsIntegrationTests --PrintDriveSpace
+    - script: tracer\build.cmd BuildAndRunWindowsIntegrationTests --PrintDriveSpace
       displayName: Run integration tests
 
     - task: PublishTestResults@2
@@ -370,7 +370,7 @@ stages:
         patterns: '**/*.msi'
         path: $(System.DefaultWorkingDirectory)/$(relativeMsiOutputDirectory)
 
-    - script: build.cmd BuildWindowsIntegrationTests
+    - script: tracer\build.cmd BuildWindowsIntegrationTests
       displayName: BuildWindowsIntegrationTests
 
     - task: DockerCompose@0
@@ -391,7 +391,7 @@ stages:
         Get-ChildItem $(tracerHome)/net45 -Filter *.dll | Foreach-Object { $publish.GacInstall($_.FullName) }
       displayName: Add net45 Datadog.Trace.ClrProfiler.Managed assets to the GAC
 
-    - script: build.cmd RunWindowsIisIntegrationTests
+    - script: tracer\build.cmd RunWindowsIisIntegrationTests
       displayName: RunWindowsIisIntegrationTests
 
     - task: PublishTestResults@2
@@ -565,7 +565,7 @@ stages:
     - template: steps/install-dotnet-5-sdk.yml
     - template: steps/restore-working-directory.yml
 
-    - script: build.cmd RunBenchmarks
+    - script: tracer\build.cmd RunBenchmarks
       displayName: RunBenchmarks
 
     ## Is this really necessary?
@@ -633,10 +633,10 @@ stages:
       inputs:
         filePath: ./.azure-pipelines/setup_tracer.ps1
 
-    - script: build.cmd BuildRunnerTool --skip
+    - script: tracer\build.cmd BuildRunnerTool --skip
       displayName: Build Runner tool
 
-    - script: build.cmd BuildStandaloneTool --skip
+    - script: tracer\build.cmd BuildStandaloneTool --skip
       displayName: Build Standalone tool
 
     - task: DeleteFiles@1
