Change path and dump directory structure

--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -958,9 +958,13 @@ stages:
           patterns: '**/coverage.cobertura.xml'
           path: $(Build.SourcesDirectory)/cover
     
+      - task: CmdLine@2
+        inputs:
+          script: 'tree $(Build.SourcesDirectory)\cover /F /A'     
+    
       - task: reportgenerator@4
         inputs:
-          reports: '$(Build.SourcesDirectory)\cover\*\*\coverage.cobertura.xml'
+          reports: '$(Build.SourcesDirectory)\cover\**\coverage.cobertura.xml'
           targetdir: '$(Build.SourcesDirectory)\coveragereport'
           sourcedirs: '$(Build.SourcesDirectory)'
           reporttypes: 'Cobertura'
