--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -104,8 +104,7 @@ stages:
         baseImage: $(baseImage)
         command: "Clean BuildTracerHome ZipTracerHome"
 
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/build/bin/Release/x64
-      condition: ne(variables['matrixName'], 'arm64')
+    - publish: $(tracerHome)
       displayName: Uploading linux tracer home artifact
       artifact: linux-tracer-home-$(matrixName)
 
@@ -113,11 +112,6 @@ stages:
       condition: ne(variables['matrixName'], 'arm64')
       displayName: Upload linux-x64 packages
       artifact: linux-packages-$(matrixName)
-
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/build/bin/Release/arm64
-      condition: eq(variables['matrixName'], 'arm64')
-      displayName: Uploading arm64 tracer home artifact
-      artifact: linux-tracer-home-$(matrixName)
 
     - publish: $(artifacts)/linux-arm64
       condition: eq(variables['matrixName'], 'arm64')
@@ -143,15 +137,7 @@ stages:
     - script: ./build.sh BuildTracerHome
       displayName: Build tracer home
 
-    ## TODO: Move to Nuke target
-    - script: |
-        mkdir -p src/Datadog.Trace.ClrProfiler.Native/bin/netstandard2.0
-        cp src/bin/windows-tracer-home/netstandard2.0/*.dll src/Datadog.Trace.ClrProfiler.Native/bin/netstandard2.0/
-        mkdir -p src/Datadog.Trace.ClrProfiler.Native/bin/netcoreapp3.1
-        cp src/bin/windows-tracer-home/netcoreapp3.1/*.dll src/Datadog.Trace.ClrProfiler.Native/bin/netcoreapp3.1/
-      displayName: Copy files into macos-tracer-home
-
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin
+    - publish: $(tracerHome)
       displayName: Uploading macos profiler artifact
       artifact: macos-tracer-home
 
