Try fix flakiness in Arm64 Linux Integration builds

--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -484,6 +484,16 @@ stages:
       vmImage: $(vmImage)
 
     steps:
+    # Doing a clean of obj files _before_ restore to remove build output from previous runs
+    # Can't do a full clean, as otherwise restore-working-directory fails
+    # Only necessary for ARM64, but shouldn't cause any harm on others
+    # Can't ifdef it as depends on a matrix variable
+    - template: steps/run-in-docker.yml
+      parameters:
+        build: true
+        baseImage: $(baseImage)
+        command: "CleanObjFiles"
+
     - template: steps/restore-working-directory.yml
       parameters:
         artifact: build-linux-$(matrixName)-working-directory
