--- a/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
+++ b/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
@@ -178,12 +178,11 @@ endif()
 # Sets compiler options
 add_compile_options(-std=c++17 -fPIC -fms-extensions)
 add_compile_options(-DPAL_STDCPP_COMPAT -DPLATFORM_UNIX -DUNICODE)
-#add_compile_options(-Wno-invalid-noreturn -Wno-macro-redefined -Wno-c++17-extensions)
-#add_compile_options(-Wno-invalid-noreturn -Wno-macro-redefined)
+add_compile_options(-Wno-invalid-noreturn -Wno-macro-redefined)
 if (ISMACOS)
     add_compile_options(-stdlib=libc++ -DMACOS -Wno-pragma-pack)
 elseif(ISLINUX)
-    add_compile_options(-DLINUX -Wno-pragmas)
+    add_compile_options(-stdlib=libstdc++ -DLINUX -Wno-pragmas)
 endif()
 if (BIT64)
     add_compile_options(-DBIT64 -DHOST_64BIT)
