--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -3,6 +3,7 @@ trigger:
     include:
       - master
       - release/*
+      - hotfix/*
   paths:
     exclude:
       - docs/*
@@ -12,6 +13,7 @@ pr:
     include:
       - master
       - release/*
+      - hotfix/*
   paths:
     exclude:
       - docs/*
