--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -3,6 +3,7 @@ trigger:
     include:
       - master
       - release/*
+      - hotfix/*
       - refs/tags/*
     exclude:
       - refs/pull/*/head
