--- a/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
+++ b/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
@@ -67,23 +67,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\$(Configuration)\$(Platform)\static\</OutDir>
-    <IntDir>obj\$(Configuration)\$(Platform)\static\</IntDir>
+    <OutDir>..\..\bin\bin\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\$(Platform)\static\</OutDir>
+    <IntDir>..\..\bin\obj\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\$(Platform)\static\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>bin\$(Configuration)\x86\static\</OutDir>
-    <IntDir>obj\$(Configuration)\x86\static\</IntDir>
+    <OutDir>..\..\bin\bin\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\x86\static\</OutDir>
+    <IntDir>..\..\bin\obj\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\x86\static\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>bin\$(Configuration)\$(Platform)\static\</OutDir>
-    <IntDir>obj\$(Configuration)\$(Platform)\static\</IntDir>
+    <OutDir>..\..\bin\bin\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\$(Platform)\static\</OutDir>
+    <IntDir>..\..\bin\obj\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\$(Platform)\static\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>bin\$(Configuration)\x86\static\</OutDir>
-    <IntDir>obj\$(Configuration)\x86\static\</IntDir>
+    <OutDir>..\..\bin\bin\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\x86\static\</OutDir>
+    <IntDir>..\..\bin\obj\src\Datadog.Trace.ClrProfiler.Native\$(Configuration)\x86\static\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
