--- a/test/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
+++ b/test/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
@@ -21,8 +21,8 @@
 
   <!--  Move bin and obj folders to root -->
   <PropertyGroup>
-    <BaseOutputPath>..\..\..\bin\bin\test\benchmarks\$(MSBuildProjectName)</BaseOutputPath>
-    <BaseIntermediateOutputPath>..\..\..\bin\obj\test\benchmarks\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(SolutionDir)bin\bin\test\benchmarks\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(SolutionDir)bin\obj\test\benchmarks\$(MSBuildProjectName)</BaseIntermediateOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
