--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -12,8 +12,8 @@
 
   <!--  Move bin and obj folders to parent -->
   <PropertyGroup>
-    <BaseOutputPath>$(MSBuildThisFileDirectory)..\bin\bin\test\$(MSBuildProjectName)</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\bin\obj\test\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(SolutionDir)bin\bin\test\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(SolutionDir)bin\obj\test\$(MSBuildProjectName)</BaseIntermediateOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
