--- a/test/test-applications/aspnet/Directory.Build.props
+++ b/test/test-applications/aspnet/Directory.Build.props
@@ -11,7 +11,7 @@
 
   <!--  Move bin and obj folders to root -->
   <PropertyGroup>
-    <BaseOutputPath>$(MSBuildThisFileDirectory)..\..\..\bin\bin\test\test-applications\aspnet\$(MSBuildProjectName)</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\..\..\bin\obj\test\test-applications\aspnet\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(SolutionDir)bin\bin\test\test-applications\aspnet\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(SolutionDir)bin\obj\test\test-applications\aspnet\$(MSBuildProjectName)</BaseIntermediateOutputPath>
   </PropertyGroup>
 </Project>
