Updates in response to comments from Andrew.
Co-authored-by: Andrew Lock <andrew.lock@datadoghq.com>

--- a/src/Datadog.Trace/Datadog.Trace.csproj
+++ b/src/Datadog.Trace/Datadog.Trace.csproj
@@ -26,11 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="AppSec\Waf\rule-set.txt" />
+    <None Remove="AppSec\Waf\rule-set.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="AppSec\Waf\rule-set.txt" />
+    <EmbeddedResource Include="AppSec\Waf\rule-set.json" />
   </ItemGroup>
 
   <ItemGroup>
