--- a/test/test-applications/Directory.Build.props
+++ b/test/test-applications/Directory.Build.props
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(ExcludeNativeProfiler)' != 'true'">
-    <Content Include="$(ProfilerOutputDirectory)\*.dll;$(ProfilerOutputDirectory)\*.so;$(ProfilerOutputDirectory)\*.pdb"
+    <None Include="$(ProfilerOutputDirectory)\*.dll;$(ProfilerOutputDirectory)\*.so;$(ProfilerOutputDirectory)\*.pdb"
           CopyToOutputDirectory="Always"
           CopyToPublishDirectory="Always"
           Link="profiler-lib\%(RecursiveDir)\%(Filename)%(Extension)" />
