--- a/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj
+++ b/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="miniutf.cpp" />
     <ClCompile Include="pal.cpp" />
+    <ClCompile Include="proxy.cpp" />
     <ClCompile Include="string.cpp" />
   </ItemGroup>
   <ItemGroup>
