--- a/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj.filters
+++ b/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="proxy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="guid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
