Add support for loader.conf

--- a/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj.filters
+++ b/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj.filters
@@ -71,4 +71,7 @@
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="loader.conf" />
+  </ItemGroup>
 </Project>
