Adds file exists.

--- a/src/Datadog.NativeLoader/loader.conf
+++ b/src/Datadog.NativeLoader/loader.conf
@@ -1,1 +1,2 @@
 {846F5F1C-F9AE-4B07-969E-05C26BC060D8}=C:\\github\\dd-trace-dotnet\\src\\bin\\windows-tracer-home\\win-x64\\Datadog.Trace.ClrProfiler.Native.dll
+{846F5F1C-F9AE-4B07-969E-05C26BC060D8}=/Users/tony.redondo/repos/github/DataDog/dd-trace-dotnet/bin/tracer-home/Datadog.Trace.ClrProfiler.Native.dylib
